# perishable-pricing-openenv

./: Dockerfile  README.md  __init__.py  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
artifacts/: baseline_scores.json  inference_scores.json  run_trace.csv  run_trace.jsonl
perishable_pricing_env/: __init__.py  client.py  config.py  environment.py  models.py
scripts/: plot_trace.py  run_baseline.py
server/: __init__.py  app.py  environment.py  perishable_pricing_environment.py  requirements.txt
tasks/: __init__.py  graders.py
