[project]
name = "perishable-pricing-openenv"
version = "0.1.0"
description = "OpenEnv perishable pricing simulator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "numpy",
  "openai",
  "pyyaml",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

